# security-universe

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  release.yml  testpypi.yml
diagrams/: security-universe-system.excalidraw  security-universes-system.excalidraw
docs/: README.md  api.md  architecture.md  cli.md  decisions.md  examples.md  implementation-plan.md  release.md  resolver.md  roadmap.md  security.md  storage.md  testing.md
examples/: basic.py  custom_resolver.py  demo_all_security_types.ipynb  futures.py  options.py  sqlite.py
examples/.ipynb_checkpoints/: sqlite-checkpoint.py
src/security_universe/: __init__.py  cli.py  exceptions.py  import_export.py  models.py  protocols.py  registry.py  stores.py  symbology.py
src/security_universe/resolvers/: __init__.py  _rules.py  chain.py  crypto.py  equity.py  future.py  future_option.py  index.py  occ.py  tastytrade.py
src/security_universe/resolvers/data/: future_option_rules.yaml  index_option_rules.yaml
src/security_universes/: __init__.py  cli.py  exceptions.py  import_export.py  models.py  protocols.py  registry.py  stores.py
src/security_universes/resolvers/: __init__.py  occ.py
src/security_universes/resolvers/data/: __init__.py  adjusted_option_rules.yaml
tests/: test_chain_resolver.py  test_cli.py  test_crypto_resolver.py  test_equity_resolver.py  test_future_option_resolver.py  test_future_resolver.py  test_import_export.py  test_index_resolver.py  test_models.py  test_occ_resolver.py  test_registry.py  test_registry_sqlite.py  test_resolver_chain.py  test_store_memory.py  test_store_sqlite.py  test_symbology.py  test_tastytrade_lookup.py
