[project]
name = "security-universe"
version = "0.1.0"
description = "Security universe management for trading systems"
readme = "README.md"
authors = [
    { name = "Stephen Zagar", email = "szagar@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["trading", "securities", "universes", "watchlists"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Live front-month futures resolution via ChainResolver.with_tastytrade / TastytradeActiveContractLookup.
tastytrade = [
    "tastytrade>=9.0",
]

[project.urls]
Homepage = "https://github.com/szagar/security-universe"
Repository = "https://github.com/szagar/security-universe"
Issues = "https://github.com/szagar/security-universe/issues"

[project.scripts]
securities = "security_universe.cli:main"

[[tool.mypy.overrides]]
# Optional extra — not installed in the base/dev env, so it has no stubs to find.
module = ["tastytrade.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]
